# bchat

./: .gitignore  PR_RECONCILIATION.md  README.md  config.ini  context_loader.py  file_context_loader.py  file_watcher.py  main.py  mcp_manager.py  mcp_servers.yaml  pyproject.toml  repl.py  session.py  tool_registry.py  tools.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
future/: sessions-phase-2-and-3.md  suggested-phases.md
scripts/: install.sh  test.sh
tests/: test_command_parameters.py  test_context_integration.py  test_context_loader.py  test_file_context_loader.py  test_file_watcher.py  test_main.py  test_mcp.py  test_repl_context.py  test_session_context.py  test_set_command.py  test_tool_integration.py  test_tools.py
